# swagger-output.json
@@ -7,13 +7,47 @@
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "paths": {
     "/project": {
       "post": {
+        "summary": "Create a project",
+        "tags": ["Project"],
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "project_id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/project/member/{project_id}": {
+      "get": {
+        "summary": "Return a list members of a project",
+        "tags": ["Project"],
+        "description": "member list",
+        "parameters": [
+          {
+            "name": "project_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -23,6 +57,8 @@
     },
     "/project/{project_id}": {
       "put": {
+        "summary": "Update a project",
+        "tags": ["Project"],
         "description": "",
         "parameters": [
           {
@@ -65,6 +101,8 @@
         }
       },
       "delete": {
+        "summary": "Delete a project",
+        "tags": ["Project"],
         "description": "",
         "parameters": [
           {
@@ -109,6 +147,8 @@
     },
     "/member": {
       "post": {
+        "summary": "Add a user to a project",
+        "tags": ["Member"],
         "description": "",
         "parameters": [
           {
@@ -143,18 +183,12 @@
             "description": "Internal Server Error"
           }
         }
-      },
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
       }
     },
     "/member/{id}": {
       "delete": {
+        "summary": "Remove a user from a project",
+        "tags": ["Member"],
         "description": "",
         "parameters": [
           {
@@ -197,6 +231,8 @@
         }
       },
       "put": {
+        "summary": "Edit role of a user in a project",
+        "tags": ["Member"],
         "description": "",
         "parameters": [
           {
@@ -241,6 +277,8 @@
     },
     "/colum": {
       "post": {
+        "summary": "Create a colum in a project",
+        "tags": ["Colum"],
         "description": "",
         "parameters": [
           {
@@ -279,6 +317,8 @@
     },
     "/colum/{col_id}": {
       "put": {
+        "summary": "Update a colum in a project",
+        "tags": ["Colum"],
         "description": "",
         "parameters": [
           {
@@ -321,6 +361,8 @@
         }
       },
       "delete": {
+        "summary": "Delete a colum in a project",
+        "tags": ["Colum"],
         "description": "",
         "parameters": [
           {
